--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "food-festival",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "webpack": "webpack --watch",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maxhealy01/food-festival.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maxhealy01/food-festival/issues"
-  },
-  "homepage": "https://github.com/maxhealy01/food-festival#readme",
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "webpack": "^5.23.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.6.0",
-    "image-webpack-loader": "^7.0.1",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
-  }
+	"name": "food-festival",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"webpack": "webpack --watch",
+		"build": "webpack",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "webpack serve --mode development"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/maxhealy01/food-festival.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/maxhealy01/food-festival/issues"
+	},
+	"homepage": "https://github.com/maxhealy01/food-festival#readme",
+	"devDependencies": {
+		"file-loader": "^6.2.0",
+		"webpack": "^5.24.2",
+		"webpack-bundle-analyzer": "^4.4.0",
+		"webpack-cli": "^4.5.0",
+		"webpack-dev-server": "^3.11.2",
+		"webpack-pwa-manifest": "^4.3.0"
+	},
+	"dependencies": {
+		"bootstrap": "^4.6.0",
+		"image-webpack-loader": "^7.0.1",
+		"jquery": "^3.5.1",
+		"popper.js": "^1.16.1"
+	}
 }
